--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,21 @@
-@import url("https://fonts.googleapis.com/css2?family=Asta+Sans:wght@300..800&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Asta+Sans:wght@300..800&display=swap");
+ */
+
 
 body {
-  font-family: "Asta Sans", sans-serif;
+  font-family: 'SF_Fedora_Titles';
   overflow-x: hidden;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'SF Fedora';
+  fontSize: '48px';
+  color: 'orange';
+  background: 'linear-gradient(to right, #ffc107, #ff5722)';
+  WebkitBackgroundClip: 'text';
+  WebkitTextFillColor: 'transparent';
+  fontWeight: 'bold';
+  textShadow: '2px 2px 4px rgba(0,0,0,0.5)';
 }
 
 /*
@@ -19,33 +32,34 @@ Utilities Classes
 }
 
 .btn-primary {
-  background: #5c4f36;
+  background: #A3A777;
   color: #fff;
   padding: 10px 30px;
   border-radius: 20px 0 20px 0;
-  border: 2px solid #5c4f36;
+  border: 2px solid #A3A777;
   transition: all 0.3s ease-in-out;
 }
 .btn-primary:hover {
   background: transparent;
-  border: 2px solid #5c4f36;
-  color: #383021;
+  border: 2px solid #222;
+  color: #222;
 }
 .btn-secondary {
-  border: 2px solid #5c4f36;
-  color: #383020;
+  border: 2px solid #222;
+  color: #222;
   padding: 10px 30px;
   border-radius: 20px 0 20px 0;
   transition: all 0.3s ease-in-out;
 }
 .btn-secondary:hover {
-  background: #5c4f36;
+  background: #A3A777;
+  border: 2px solid #A3A777;
   color: #fff;
 }
 
 .linear_gradient {
-  /* background: linear-gradient(to right, #f4f4f4, #a3a777); */
-  background: url("/Images/texture.png");
+  background: linear-gradient(to right, #f4f4f4, #a3a777);
+  /* background: url("/Images/texture.png"); */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat; 
@@ -82,7 +96,7 @@ button {
   display: inline-flex !important;
   flex-direction: column !important;
   justify-content: center !important;
-  top: 40% !important;
+  top: 50% !important;
   right: 2% !important;
   width: auto !important;
   height: 80px !important;
