--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,25 @@
 /* @import url("https://fonts.googleapis.com/css2?family=Asta+Sans:wght@300..800&display=swap");
  */
 
-
 body {
-  font-family: 'SF_Fedora_Titles';
+  /* font-family: "SF_Fedora_Titles"; */
   overflow-x: hidden;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'SF Fedora';
-  fontSize: '48px';
-  color: 'orange';
-  background: 'linear-gradient(to right, #ffc107, #ff5722)';
-  WebkitBackgroundClip: 'text';
-  WebkitTextFillColor: 'transparent';
-  fontWeight: 'bold';
-  textShadow: '2px 2px 4px rgba(0,0,0,0.5)';
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "SF Fedora";
+  fontsize: "48px";
+  color: "orange";
+  background: "linear-gradient(to right, #ffc107, #ff5722)";
+  webkitbackgroundclip: "text";
+  webkittextfillcolor: "transparent";
+  fontweight: "bold";
+  textshadow: "2px 2px 4px rgba(0,0,0,0.5)";
 }
 
 /*
@@ -32,11 +36,11 @@ Utilities Classes
 }
 
 .btn-primary {
-  background: #A3A777;
+  background: #a3a777;
   color: #fff;
   padding: 10px 30px;
   border-radius: 20px 0 20px 0;
-  border: 2px solid #A3A777;
+  border: 2px solid #a3a777;
   transition: all 0.3s ease-in-out;
 }
 .btn-primary:hover {
@@ -52,8 +56,8 @@ Utilities Classes
   transition: all 0.3s ease-in-out;
 }
 .btn-secondary:hover {
-  background: #A3A777;
-  border: 2px solid #A3A777;
+  background: #a3a777;
+  border: 2px solid #a3a777;
   color: #fff;
 }
 
@@ -62,7 +66,7 @@ Utilities Classes
   /* background: url("/Images/texture.png"); */
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat; 
+  background-repeat: no-repeat;
   width: 100vw;
   height: 100vh;
 }
@@ -126,3 +130,447 @@ button {
   }
 }
    */
+
+body {
+  /* font-family: "Poppins", system-ui; */
+  font-weight: 400;
+  /* font-style: normal; */
+  overflow-x: hidden !important;
+}
+
+/* Logo Styling */
+.logo img {
+  width: 150px;
+  height: 150px;
+  background-color: #13121d;
+  border-top-right-radius: 85px;
+  border-right: 3px solid #D56602 !important;
+}
+
+/* Stylish Heading */
+.stylish-heading {
+  display: flex;
+  align-items: center;
+  text-transform: uppercase;
+  font-size: 0.9rem;
+  color: #D56602;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  letter-spacing: 0.2rem;
+  font-weight: bold;
+}
+
+.stylish-heading .stylish-dots {
+  display: flex;
+  flex-direction: column;
+  margin-right: 0.5rem;
+  margin-top: 0.1rem;
+}
+
+.stylish-dots .dot-icon {
+  display: flex;
+}
+
+.dot-icon .dot {
+  width: 3px;
+  height: 2px;
+  border-radius: 0%;
+  background-color: #D56602;
+  margin: 0.2rem;
+}
+
+/* Custom Button */
+.btn-main {
+  border: 3px solid #D56602 !important;
+  background: transparent !important;
+  color: #fff;
+  border-radius: 0% !important;
+  font-weight: 600;
+  padding: 1rem 2rem;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 0.9rem;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+  position: relative;
+}
+
+.btn-main::before {
+  position: absolute;
+  content: "";
+  display: block;
+  width: 0%;
+  height: 100%;
+  background-color: #D56602 !important;
+  top: 0%;
+  left: 0%;
+  z-index: -1;
+  transition: all 0.3s ease-in-out;
+}
+
+.btn-main:hover::before {
+  width: 100% !important;
+}
+
+/* Header */
+#header {
+  height: 120vh !important;
+  height: 100%;
+  /* background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+    url(../public/Images/Hero\ Section\ Banner/46.png); */
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+/* ################################
+Navbar Styling Portion
+##################################*/
+#navbar {
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  z-index: 999 !important;
+  transition: all 0.4s ease-in-out;
+  height: 100%;
+  max-height: 10vh;
+}
+
+#navbar .container {
+  background-color: #222;
+  padding: 0% !important;
+  margin-top: 1rem;
+  width: 100%;
+  border-radius: 15px !important;
+}
+
+#navbar .logo {
+  background-color: #111 !important;
+  border-top-left-radius: 15px !important;
+  border-bottom-left-radius: 15px !important;
+}
+
+#navbar .logo img {
+  border-top-left-radius: 15px !important;
+  border-bottom-left-radius: 15px !important;
+}
+
+#navbar .top-menu {
+  background-color: #111;
+  width: 100%;
+  border-top-right-radius: 15px !important;
+  /* height: 40%; */
+}
+
+.top-menu .social-links i {
+  color: #D56602;
+  margin-right: 1rem;
+  cursor: pointer;
+}
+
+.top-menu p {
+  color: #fff;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.top-menu p i {
+  color: #fff;
+  background-color: #D56602;
+  border-radius: 50%;
+  padding: 0.5rem;
+  font-size: 1rem;
+  margin-right: 1rem;
+  transition: all 0.2s ease-in-out;
+}
+
+.top-menu p:hover i {
+  transform: rotate(-180deg);
+}
+
+#navbar .bottom-menu {
+  width: 100%;
+  /* height: 60%; */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #222;
+  border-bottom-right-radius: 15px !important;
+}
+
+#navbar .bottom-menu .nav-manu {
+  color: #666;
+  font-size: 1.5rem !important;
+  /* margin: 0 1rem; */
+  display: none;
+  text-align: end;
+}
+
+#navbar .bottom-menu .nav-manu i {
+  cursor: pointer;
+}
+
+.bottom-menu .bottom-menu-unordered-list {
+  display: flex;
+  list-style: none;
+}
+
+.bottom-menu .bottom-menu-unordered-list .menu-list-link {
+  color: #999;
+  text-decoration: none !important;
+  margin-right: 2rem;
+  text-transform: uppercase;
+  font-family: 'Poppins', sans-serif;
+  font-size: 0.85rem;
+  font-weight: 600;
+  display: inline-block;
+}
+
+.bottom-menu .bottom-menu-unordered-list .menu-list-link::after {
+  content: "";
+  display: block;
+  width: 0%;
+  height: 2px;
+  background-color: #D56602;
+  margin-top: 0.2rem;
+  transition: all 0.3s ease-in-out;
+}
+
+.bottom-menu .bottom-menu-unordered-list .menu-list-link:hover::after {
+  width: 100%;
+}
+
+.bottom-menu a {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+/* ################################
+Aside Styling Portion
+##################################*/
+/* width */
+#aside::-webkit-scrollbar {
+  width: 2px;
+}
+
+/* Track */
+#aside::-webkit-scrollbar-track {
+  background: #333;
+}
+
+/* Handle */
+#aside::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+#aside::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+#aside {
+  height: 100%;
+  width: 300px;
+  background-color: #222;
+  position: fixed;
+  top: 0%;
+  right: -150%;
+  z-index: 9999 !important;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  transition: all 0.5s ease-in-out;
+}
+
+.aside-close i {
+  color: #fff;
+  display: block;
+  text-align: end;
+  margin: 1rem;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+.aside-close i:hover {
+  color: #b2c1c0;
+}
+
+.aside-content .aside-items {
+  padding: 1rem 0;
+}
+
+.aside-items a {
+  display: block;
+  color: #fff;
+  text-decoration: none !important;
+  padding: 0.6rem 1.5rem;
+  border-top: 1px solid #333;
+  font-size: 0.9rem;
+  transition: all 0.3s ease-in-out;
+  text-transform: uppercase;
+}
+
+a.contact {
+  border-bottom: 1px solid #333;
+}
+
+.aside-items a:hover {
+  color: #D56602;
+}
+
+.aside-contact-detail {
+  padding: 0.6rem 1.5rem;
+}
+
+.aside-contact-detail i {
+  color: #D56602;
+  font-size: 2rem;
+}
+
+.aside-contact-detail h6,
+.aside-contact-detail p {
+  color: #fff;
+}
+
+.aside-contact-detail h6 {
+  font-size: 0.8rem;
+  color: #b2c1c0;
+}
+
+.aside-contact-detail p {
+  font-size: 0.9rem;
+}
+
+.aside-footer-media {
+  position: absolute;
+  top: 96.5%;
+  left: 0%;
+  border-top: 1px solid #333;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.aside-footer-media a {
+  padding: 0.6rem 1.5rem;
+  border-left: 1px solid #333;
+  color: #fff;
+  width: 50%;
+  text-align: center;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+.aside-footer-media a:hover {
+  color: #D56602;
+}
+
+/* ################################
+Showcase Section
+##################################*/
+#showcase {
+  position: relative;
+  height: 120vh;
+  z-index: 10;
+}
+
+.showcase-content {
+  position: absolute;
+  top: 60%;
+  left: 8%;
+  transform: translate(0%, -50%);
+  z-index: 99;
+  padding: 3rem;
+}
+
+.showcase-content-effect {
+  display: block;
+  content: "";
+  border: 10px solid rgba(213, 102, 2, .2);
+  height: 450px;
+  width: 350px;
+  position: absolute;
+  top: 0%;
+  left: 0%;
+}
+
+.showcase-content-vertical-effect {
+  display: block;
+  content: "";
+  background-color: rgb(163, 167, 119, .2);
+  height: 100%;
+  width: 450px;
+  position: absolute;
+  top: 0%;
+  left: 55%;
+  transform: skew(-20deg);
+}
+
+.showcase-content-social-media-box {
+  background-color: #D56602;
+  position: absolute;
+  top: 30%;
+  left: 75%;
+  width: 250px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transform: translate(-30%, 0%) skew(-20deg);
+  z-index: 1 !important;
+}
+
+.showcase-content-social-media-box a {
+  color: #fff;
+  text-decoration: none !important;
+  transform: rotate(90deg);
+  margin: 3rem 0;
+  text-transform: uppercase;
+  font-size: 0.9rem;
+  font-family: Arial, Helvetica, sans-serif;
+  z-index: 9999 !important;
+  display: block;
+}
+
+.showcase-content-social-media-box a:hover {
+  color: #111 !important;
+}
+
+.showcase-content h6 {
+  color: #fff;
+  font-size: 1.2rem;
+  /* font-weight: bold; */
+  /* font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; */
+  display: inline-block;
+}
+
+.showcase-content h6::after {
+  content: "";
+  display: block;
+  width: 100%;
+  background-color: #D56602;
+  height: 5px;
+  margin-top: 0.5rem;
+}
+
+.showcase-content h1 {
+  color: #fff;
+  font-size: 4rem;
+  /* font-weight: bolder; */
+  /* font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; */
+}
+
+.showcase-content h1 span {
+  color: #D56602;
+}
+
+.showcase-content p {
+  color: #fff;
+  margin: 1rem 0;
+  padding: 0.3rem;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
