--- a/src/App.css
+++ b/src/App.css
@@ -180,12 +180,11 @@ body {
 
 /* Custom Button */
 .btn-main {
-  border: 3px solid #D56602 !important;
+  border: 2px solid #D56602 !important;
   background: transparent !important;
-  color: #fff;
+  color: #D56602;
   border-radius: 0% !important;
   font-weight: 600;
-  padding: 1rem 2rem;
   text-decoration: none;
   display: inline-block;
   font-size: 0.9rem;
@@ -193,6 +192,7 @@ body {
   transition: all 0.3s ease-in-out;
   cursor: pointer;
   position: relative;
+  border-radius: 10px !important;
 }
 
 .btn-main::before {
@@ -201,7 +201,7 @@ body {
   display: block;
   width: 0%;
   height: 100%;
-  background-color: #D56602 !important;
+  background-color: #D56602;
   top: 0%;
   left: 0%;
   z-index: -1;
@@ -209,12 +209,16 @@ body {
 }
 
 .btn-main:hover::before {
-  width: 100% !important;
+  width: 100%;
+  border-radius: 10px;
+}
+.btn-main:hover {
+  color: #fff;
 }
 
 /* Header */
 #header {
-  height: 120vh !important;
+  height: 100vh !important;
   height: 100%;
   /* background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
     url(../public/Images/Hero\ Section\ Banner/46.png); */
@@ -480,7 +484,7 @@ Showcase Section
 ##################################*/
 #showcase {
   position: relative;
-  height: 120vh;
+  height: 100vh;
   z-index: 10;
 }
 
