--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
  */
 
 body {
-  /* font-family: "SF_Fedora_Titles"; */
+  font-family: "SF_Fedora_Titles";
   overflow-x: hidden;
 }
 
@@ -131,20 +131,13 @@ button {
 }
    */
 
-body {
-  /* font-family: "Poppins", system-ui; */
-  font-weight: 400;
-  /* font-style: normal; */
-  overflow-x: hidden !important;
-}
-
 /* Logo Styling */
 .logo img {
   width: 150px;
   height: 150px;
   background-color: #13121d;
   border-top-right-radius: 85px;
-  border-right: 3px solid #D56602 !important;
+  border-right: 3px solid #d56602 !important;
 }
 
 /* Stylish Heading */
@@ -153,13 +146,13 @@ body {
   align-items: center;
   text-transform: uppercase;
   font-size: 0.9rem;
-  color: #D56602;
+  color: #d56602;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   letter-spacing: 0.2rem;
   font-weight: bold;
 }
 
-.stylish-heading .stylish-dots {
+/* .stylish-heading .stylish-dots {
   display: flex;
   flex-direction: column;
   margin-right: 0.5rem;
@@ -174,21 +167,20 @@ body {
   width: 3px;
   height: 2px;
   border-radius: 0%;
-  background-color: #D56602;
+  background-color: #d56602;
   margin: 0.2rem;
-}
+} */
 
 /* Custom Button */
 .btn-main {
-  border: 2px solid #D56602 !important;
+  border: 2px solid #d56602 !important;
   background: transparent !important;
-  color: #D56602;
+  color: #d56602;
   border-radius: 0% !important;
   font-weight: 600;
   text-decoration: none;
   display: inline-block;
   font-size: 0.9rem;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   transition: all 0.3s ease-in-out;
   cursor: pointer;
   position: relative;
@@ -201,7 +193,7 @@ body {
   display: block;
   width: 0%;
   height: 100%;
-  background-color: #D56602;
+  background-color: #d56602;
   top: 0%;
   left: 0%;
   z-index: -1;
@@ -218,39 +210,32 @@ body {
 
 /* Header */
 #header {
-  height: 100vh !important;
-  height: 100%;
-  /* background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
-    url(../public/Images/Hero\ Section\ Banner/46.png); */
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  height: 100vh;
+  width: 100vw;
 }
 
 /* ################################
 Navbar Styling Portion
 ##################################*/
 #navbar {
-  position: fixed;
-  top: 0%;
-  left: 0%;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   z-index: 999 !important;
   transition: all 0.4s ease-in-out;
-  height: 100%;
-  max-height: 10vh;
+  padding: 1rem 0;
 }
 
 #navbar .container {
-  background-color: #222;
+  /* background-color: #222; */
   padding: 0% !important;
-  margin-top: 1rem;
   width: 100%;
   border-radius: 15px !important;
 }
 
 #navbar .logo {
-  background: url('/Images/texture.png'), #D56602;
+  background: url("/Images/texture.png"), #9c5043;
   background-blend-mode: multiply;
   background-size: contain;
   border-top-left-radius: 15px !important;
@@ -259,12 +244,13 @@ Navbar Styling Portion
 
 #navbar .logo img {
   background-color: #fff;
+  border-color: #9c5043 !important;
   border-top-left-radius: 15px !important;
   border-bottom-left-radius: 15px !important;
 }
 
 #navbar .top-menu {
-  background: url('/Images/texture.png'), #D56602;
+  background: url("/Images/texture.png"), #9c5043;
   background-blend-mode: multiply;
   background-size: contain;
   width: 100%;
@@ -273,14 +259,14 @@ Navbar Styling Portion
 }
 
 .top-menu .social-links i {
-  color: #D56602;
+  color: #d56602;
   margin-right: 1rem;
   cursor: pointer;
 }
 
 .top-menu p {
   color: #fff;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   display: flex;
   align-items: center;
   cursor: pointer;
@@ -288,7 +274,7 @@ Navbar Styling Portion
 
 .top-menu p i {
   color: #fff;
-  background-color: #D56602;
+  background-color: #d56602;
   border-radius: 50%;
   padding: 0.5rem;
   font-size: 1rem;
@@ -306,10 +292,11 @@ Navbar Styling Portion
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: url('/Images/texture.png'), #9c5043;
+  background: url("/Images/texture.png"), #9c5043;
   background-blend-mode: multiply;
   background-size: contain;
   border-bottom-right-radius: 15px !important;
+  font-family: "SF_Fedora_Titles" !important;
 }
 
 #navbar .bottom-menu .nav-manu {
@@ -334,8 +321,8 @@ Navbar Styling Portion
   text-decoration: none !important;
   margin-right: 2rem;
   text-transform: uppercase;
-  font-family: 'Poppins', sans-serif;
-  font-size: 0.85rem;
+  font-family: "SF_Fedora_Titles";
+  font-size: 0.7rem;
   font-weight: 600;
   display: inline-block;
 }
@@ -345,7 +332,7 @@ Navbar Styling Portion
   display: block;
   width: 0%;
   height: 2px;
-  background-color: #D56602;
+  background-color: #d56602;
   margin-top: 0.2rem;
   transition: all 0.3s ease-in-out;
 }
@@ -355,7 +342,7 @@ Navbar Styling Portion
 }
 
 .bottom-menu a {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "SF_Fedora_Titles";
 }
 
 /* ################################
@@ -428,7 +415,7 @@ a.contact {
 }
 
 .aside-items a:hover {
-  color: #D56602;
+  color: #d56602;
 }
 
 .aside-contact-detail {
@@ -436,7 +423,7 @@ a.contact {
 }
 
 .aside-contact-detail i {
-  color: #D56602;
+  color: #d56602;
   font-size: 2rem;
 }
 
@@ -476,7 +463,7 @@ a.contact {
 }
 
 .aside-footer-media a:hover {
-  color: #D56602;
+  color: #d56602;
 }
 
 /* ################################
@@ -484,8 +471,6 @@ Showcase Section
 ##################################*/
 #showcase {
   position: relative;
-  height: 100vh;
-  z-index: 10;
 }
 
 .showcase-content {
@@ -500,7 +485,7 @@ Showcase Section
 .showcase-content-effect {
   display: block;
   content: "";
-  border: 10px solid rgba(213, 102, 2, .2);
+  border: 10px solid rgba(213, 102, 2, 0.2);
   height: 450px;
   width: 350px;
   position: absolute;
@@ -511,7 +496,7 @@ Showcase Section
 .showcase-content-vertical-effect {
   display: block;
   content: "";
-  background-color: rgb(163, 167, 119, .2);
+  background-color: rgb(163, 167, 119, 0.2);
   height: 100%;
   width: 450px;
   position: absolute;
@@ -521,7 +506,7 @@ Showcase Section
 }
 
 .showcase-content-social-media-box {
-  background-color: #D56602;
+  background-color: #d56602;
   position: absolute;
   top: 30%;
   left: 75%;
@@ -563,7 +548,7 @@ Showcase Section
   content: "";
   display: block;
   width: 100%;
-  background-color: #D56602;
+  background-color: #d56602;
   height: 5px;
   margin-top: 0.5rem;
 }
@@ -576,12 +561,12 @@ Showcase Section
 }
 
 .showcase-content h1 span {
-  color: #D56602;
+  color: #d56602;
 }
 
 .showcase-content p {
   color: #fff;
   margin: 1rem 0;
   padding: 0.3rem;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
