--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
  */
 
 body {
-  font-family: "SF_Fedora_Titles";
+  font-family: "Roboto", sans-serif;
   overflow-x: hidden;
 }
 
@@ -174,6 +174,7 @@ button {
 /* Custom Button */
 .btn-main {
   color: #222;
+  font-family: "SF_Fedora_Titles";
 }
 
 .btn-main::after,
