--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,27 @@ Utilities Classes
   display: flex;
 }
 
+.shield {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 60px;
+  background-color: #d33;
+  color: #f4a524; /* gold-ish color */
+  font-size: 24px;
+  font-weight: bold;
+  clip-path: polygon(
+    50% 0%,    /* top center */
+    90% 15%,   /* top right */
+    90% 70%,   /* mid right */
+    50% 100%,  /* bottom point */
+    10% 70%,   /* mid left */
+    10% 15%    /* top left */
+  );
+  user-select: none;
+}
+
 @media (max-width: 1280px) {
   .container {
     max-width: 1000px;
